gotify/gotify-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: gotify
spec: {}
status: {}
